fix: adjust Porvenir 13 Jun

--- a/pages/el-porvenir/index.html
+++ b/pages/el-porvenir/index.html
@@ -51,7 +51,7 @@
                                 <img class="img-fluid"
                                     src="/assets/img/grupo-765.webp" alt />
                                 <img class="img-fluid"
-                                    src="/assets/img/el-porvenir/ahorra-o-nunca.svg"
+                                    src="/assets/img/el-porvenir/ahorro-inactivo.png"
                                     alt />
                                 <img class="img-fluid"
                                     src="/assets/img/cusiana/repite-el-ciclo.svg"
@@ -196,7 +196,7 @@
                             </div>
 
                             <div class="px-1">
-                                <h6 class="m-0">Huella Hídrica El Porvenir</h6>
+                                <h6 class="m-0">Huella Hídrica Porvenir</h6>
                                 <p style="font-size: 32px;" class="number-large font-weight-bold">620.598 m3</p>
                                 <p class="text-gray-light-ocensa">HH TOTAL OCENSA</p>
                                 <span
@@ -592,7 +592,7 @@
                                                 class="card-interactive-icons___box-description">
                                                 <p>
                                                     Aguas <br />
-                                                    Subterraneas
+                                                    Subterráneas
                                                 </p>
                                             </div>
                                         </div>
@@ -2390,7 +2390,7 @@
                                                 class="d-flex align-items-center card-interactive-icons__container">
                                                 <div
                                                     class="card-interactive-icons___box-icon"
-                                                    style="--border-fill: #acff9c">
+                                                    style="--border-fill: #27ff00">
                                                     <svg
                                                         xmlns="http://www.w3.org/2000/svg"
                                                         width="29"
@@ -2964,7 +2964,7 @@
                                                 </div>
                                                 <div
                                                     class="card-interactive-icons___box-description">
-                                                    <p>Botiquin</p>
+                                                    <p>Botiquín</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -3019,7 +3019,7 @@
                                 <div class="map-terminal-2024__dots">
                                     <div class="dots-map-2024 dots-monitoreo d-none" id="cusiana-monitoreo-1">
                                         <span style="--outline-color: #21a605;left: 573px;top: 387px;" class="location-map-dot"></span>
-                                        <span style="--outline-color: #21a605;left: 593px;top: 357px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 590px;top: 353px;" class="location-map-dot"></span>
                                     </div>
 
                                     <div
@@ -3042,7 +3042,7 @@
                                     <div class="dots-map-2024 dots-monitoreo d-none" id="cusiana-monitoreo-4">
                                         <span style="--outline-color: #5dffa5;left: 194px;top: 274px;" class="location-map-dot"></span>
                                         <span style="--outline-color: #5dffa5;left: 577px;top: 327px;" class="location-map-dot"></span>
-                                        <span style="--outline-color: #5dffa5;left: 740px;top: 265px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #5dffa5;left: 7435x;top: 264px;" class="location-map-dot"></span>
                                     </div>
 
                                     <div class="dots-map-2024 dots-monitoreo d-none" id="cusiana-monitoreo-5">
@@ -3076,11 +3076,11 @@
                                         <!-- Item 7 -->
                                         <span style="--outline-color: #ff5512;left: 427px;top: 241px;" class="location-map-dot"></span>
                                         <!-- Item 8 -->
-                                        <span style="--outline-color: #ff5512;left: 427px;top: 267px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #ff5512;left: 425px;top: 264px;" class="location-map-dot"></span>
                                         <!-- Item 9 -->
-                                        <span style="--outline-color: #ff5512;left: 440px;top: 261px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #ff5512;left: 436px;top: 260px;" class="location-map-dot"></span>
                                         <!-- Item 10 -->
-                                        <span style="--outline-color: #ff5512;left: 444px;top: 249px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #ff5512;left: 441px;top: 249px;" class="location-map-dot"></span>
                                         <!-- Item 11 -->
                                         <span style="--outline-color: #ff5512;left: 478px;top: 272px;" class="location-map-dot"></span>
                                         <!-- Item 12 -->
@@ -3144,7 +3144,7 @@
 
                                     <div class="dots-map-2024 dots-monitoreo d-none" id="cusiana-monitoreo-8">
                                         <!-- Item 1 -->
-                                        <span style="--outline-color: #8d12ff;left: 202px;top: 277px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #8d12ff;left: 199px;top: 274px;" class="location-map-dot"></span>
                                         <!-- Item 2 -->
                                         <span style="--outline-color: #8d12ff;left: 526px;top: 362px;" class="location-map-dot"></span>
                                         <!-- Item 3 -->
@@ -3291,7 +3291,7 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-14">
                                         <span
-                                            style="--outline-color: #a59eff; left: 533px; top: 271px;"
+                                            style="--outline-color: #a59eff; left: 536px; top: 268px;"
                                             class="location-map-dot"></span>
                                     </div>
 
@@ -3375,15 +3375,15 @@
 
                                     <div class="dots-map-2024 dots-operaciones d-none" id="porvenir-operaciones-6">
                                         <!-- Item 1 -->
-                                        <span style="--outline-color: #21a605;left: 356px;top: 267px;" class="location-map-dot"></span> 
+                                        <span style="--outline-color: #21a605;left: 359px;top: 270px;" class="location-map-dot"></span> 
                                         <!-- Item 2 -->
-                                        <span style="--outline-color: #21a605;left: 359px;top: 258px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 362px;top: 261px;" class="location-map-dot"></span>
                                         <!-- Item 3 -->
-                                        <span style="--outline-color: #21a605;left: 362px;top: 249px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 365px;top: 252px;" class="location-map-dot"></span>
                                         <!-- Item 4 -->
-                                        <span style="--outline-color: #21a605;left: 365px;top: 240px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 368px;top: 243px;" class="location-map-dot"></span>
                                         <!-- Item 5 -->
-                                        <span style="--outline-color: #21a605;left: 367px;top: 233px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 370px;top: 236px;" class="location-map-dot"></span>
                                     </div>
 
                                     <div class="dots-map-2024 dots-operaciones d-none" id="porvenir-operaciones-7">
@@ -3410,27 +3410,27 @@
                                         <!-- Item 1 -->
                                         <span style="--outline-color: #21a605;left: 422px;top: 248px;" class="location-map-dot"></span>
                                         <!-- Item 2 -->
-                                        <span style="--outline-color: #21a605;left: 440px;top: 248px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 443px;top: 248px;" class="location-map-dot"></span>
                                         <!-- Item 3 -->
-                                        <span style="--outline-color: #21a605;left: 431px;top: 263px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 434px;top: 263px;" class="location-map-dot"></span>
                                     </div>
 
                                     <div class="dots-map-2024 dots-operaciones d-none" id="porvenir-operaciones-12">
                                         <!-- Item 1 -->
                                         <span style="--outline-color: #21a605;left: 746px;top: 333px;" class="location-map-dot"></span>
                                         <!-- Item 2 -->
-                                        <span style="--outline-color: #21a605;left: 739px;top: 339px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 738px;top: 341px;" class="location-map-dot"></span>
                                         <!-- Item 3 -->
-                                        <span style="--outline-color: #21a605;left: 731px;top: 346px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 731px;top: 350px;" class="location-map-dot"></span>
                                         <!-- Item 4 -->
-                                        <span style="--outline-color: #21a605;left: 724px;top: 352px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 722px;top: 358px;" class="location-map-dot"></span>
                                         <!-- Item 5 -->
                                         <span style="--outline-color: #21a605;left: 770px;top: 341px;" class="location-map-dot"></span>
                                     </div>
 
                                     <div class="dots-map-2024 dots-operaciones d-none" id="porvenir-operaciones-13">
                                         <!-- Item 1 -->
-                                        <span style="--outline-color: #21a605;left: 329px;top: 258px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 333px;top: 258px;" class="location-map-dot"></span>
                                         <!-- Item 2 -->
                                         <span style="--outline-color: #21a605;left: 596px;top: 273px;" class="location-map-dot"></span>
                                     </div>
@@ -3575,7 +3575,7 @@
                                         <!-- Item 2 -->
                                         <span style="--outline-color: #acff9c;left: 368px;top: 239px;" class="location-map-dot"></span>
                                         <!-- Item 3 -->
-                                        <span style="--outline-color: #acff9c;left: 453px;top: 336px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #acff9c;left: 450px;top: 333px;" class="location-map-dot"></span>
                                         <!-- Item 4 -->
                                         <span style="--outline-color: #acff9c;left: 620px;top: 245px;" class="location-map-dot"></span>
                                     </div>
@@ -3889,7 +3889,7 @@
                                         <!-- Item 6 -->
                                         <span style="--outline-color: #ff5512;left: 646px;top: 316px;" class="location-map-dot"></span>
                                         <!-- Item 7 -->
-                                        <span style="--outline-color: #ff5512;left: 637px;top: 328px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #ff5512;left: 636px;top: 323px;" class="location-map-dot"></span>
                                         <!-- Item 8 -->
                                         <span style="--outline-color: #ff5512;left: 679px;top: 308px;" class="location-map-dot"></span>
                                         <!-- Item 9 -->
@@ -4005,7 +4005,7 @@
                                     <div
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="porvenir-sre-16">
-                                        <span style="left: 143px; top: 220px; scale: 0.94;" class="position-absolute">
+                                        <span style="left: 151px; top: 220px; scale: 0.94;" class="position-absolute">
                                             <svg data-name="Grupo 840" xmlns="http://www.w3.org/2000/svg" width="715.403" height="222" viewBox="0 0 715.403 222">
                                                 <defs>
                                                     <clipPath id="jk641u0uma">
@@ -4114,7 +4114,7 @@
                                     <h5 class="font-weight-bold text-light m-0">
                                         Permiso de Emisiones / vertimientos ARI
                                     </h5>
-                                    <p class="text-light">(Resolución 500.41-14-1090 de 2014 )</p>
+                                    <p class="text-light">(Resolución 500.41-14-1090 de 2014)</p>
                                     <a
                                         class="button-oc-2024 color-light my-2 d-inline-block"
                                         href>Ver más</a>
@@ -4133,7 +4133,7 @@
                                     <h5 class="font-weight-bold text-light m-0">
                                         Permiso de Vertimientos ARD / Concesión de aguas
                                     </h5>
-                                    <p class="text-light">(Resolución 200.41-17-2212 de 2017 )</p>
+                                    <p class="text-light">(Resolución 200.41-17-2212 de 2017)</p>
                                     <a
                                         class="button-oc-2024 color-light my-2 d-inline-block"
                                         href>Ver más</a>
