fix: 2 puntos coveñas

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6127,35 +6127,17 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-operaciones d-none"
-                    id="covenas-operaciones-10"
-                  >
+                  <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-10">
                     <!-- item 1 -->
-                    <span
-                      style="--outline-color: #27ff00; left: 500px; top: 327px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #27ff00; left: 500px; top: 327px" class="location-map-dot"></span>
                     <!-- item 2 -->
-                    <span
-                      style="--outline-color: #27ff00; left: 518px; top: 331px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #27ff00;left: 513px;top: 330px;" class="location-map-dot"></span>
                     <!-- item 3 -->
-                    <span
-                      style="--outline-color: #27ff00; left: 536px; top: 335px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #27ff00;left: 528px;top: 333px;" class="location-map-dot"></span>
                     <!-- item 4 -->
-                    <span
-                      style="--outline-color: #27ff00; left: 554px; top: 339px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #27ff00;left: 543px;top: 336px;" class="location-map-dot"></span>
                     <!-- item 5 -->
-                    <span
-                      style="--outline-color: #27ff00; left: 572px; top: 343px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #27ff00;left: 557px;top: 340px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -8784,7 +8766,7 @@
                   <h5 class="font-weight-bold text-light m-0">
                     Permiso de Emisiones Atmosféricas
                   </h5>
-                  <p class="text-light">(Resolución 1554 de 2018)</p>
+                  <p class="text-light">(Resolución 0728 de 2024)</p>
                   <a class="button-oc-2024 color-light my-2 d-inline-block" href ="/assets/docs/covenas/permisos/2018_PE_Coveñas.pdf" target="_blank"
                     >Ver más</a
                   >
