fix: cusiana final

--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -189,7 +189,7 @@
               </div>
 
               <div class="px-1">
-                <h6 class="m-0">Huella Hídrica Cusiana:</h6>
+                <h6 class="m-0">Huella Hídrica Cusiana</h6>
                 <p style="font-size: 25px;"
                   class="number-large font-weight-bold">202.430,84 m3</p>
                   <h6 class="m-0">HH TOTAL OCENSA</h6>
@@ -3200,20 +3200,13 @@
                       class="location-map-dot"></span>
                   </div>
 
-                  <div class="dots-map-2024 dots-operaciones d-none"
-                    id="cusiana-operaciones-3">
+                  <div class="dots-map-2024 dots-operaciones d-none" id="cusiana-operaciones-3">
                     <!--item 1-->
-                    <span
-                      style="--outline-color: #27ff00; left: 616px; top: 204px;"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #27ff00;left: 618px;top: 209px;" class="location-map-dot"></span>
                       <!--item 2-->
-                    <span
-                      style="--outline-color: #27ff00; left: 619px; top: 237px;"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #27ff00;left: 621px;top: 240px;" class="location-map-dot"></span>
                       <!--item 3-->
-                    <span
-                      style="--outline-color: #27ff00; left: 621px; top: 274px;"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #27ff00;left: 621px;top: 276px;" class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
@@ -3689,7 +3682,7 @@
                     id="cusiana-sre-1">
                     <!--item 1-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCO-ECUS-05 ajuste 2024-5.pdf"
                       style="--outline-color: none; left: 509px; top: 295px"
                       class="location-map-dot dot-image"
@@ -3699,7 +3692,7 @@
                     </a>
                     <!--item 2-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCO-ECUS-01 ajuste 2024-1.pdf"
                       style="--outline-color: none; left: 542px; top: 332px"
                       class="location-map-dot dot-image"
@@ -3709,7 +3702,7 @@
                     </a>
                     <!--item 3-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCO-ECUS-02 ajuste 2024-2.pdf"
                       style="--outline-color: none; left: 574px; top: 367px"
                       class="location-map-dot dot-image"
@@ -3719,9 +3712,9 @@
                     </a>
                     <!--item 4-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCP-ECUS-01 ajuste 2024.pdf"
-                      style="--outline-color: none; left: 577px; top: 270px"
+                      style="--outline-color: none; left: 577px; top: 270px; z-index: 2;"
                       class="location-map-dot dot-image"
                     >
                       <img src="/assets/img/map-punto-control.svg" alt="" />
@@ -3729,7 +3722,7 @@
                     </a>
                     <!--item 5-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCP-ECUS-09 ajuste 2024.pdf"
                       style="--outline-color: none; left: 584px; top: 306px"
                       class="location-map-dot dot-image"
@@ -3739,9 +3732,9 @@
                     </a>
                     <!--item 6-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCP-ECUS-06 ajuste 2024.pdf"
-                      style="--outline-color: none; left: 625px; top: 148px"
+                      style="--outline-color: none; left: 625px; top: 148px; z-index: 2;"
                       class="location-map-dot dot-image"
                     >
                       <img src="/assets/img/map-punto-control.svg" alt="" />
@@ -3749,9 +3742,9 @@
                     </a>
                     <!--item 7-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCO-ECUS-04 ajuste 2024-4.pdf"
-                      style="--outline-color: none; left: 648px; top: 163px"
+                      style="--outline-color: none; left: 648px; top: 163px; z-index: 1;"
                       class="location-map-dot dot-image"
                     >
                       <img src="/assets/img/map-punto-control.svg" alt="" />
@@ -3759,9 +3752,9 @@
                     </a>
                     <!--item 8-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCO-ECUS-03 ajuste 2024-3.pdf"
-                      style="--outline-color: none; left: 605px; top: 171px"
+                      style="--outline-color: none; left: 605px; top: 171px; z-index: 2;"
                       class="location-map-dot dot-image"
                     >
                       <img src="/assets/img/map-punto-control.svg" alt="" />
@@ -3769,7 +3762,7 @@
                     </a>
                     <!--item 9-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCP-ECUS-05 ajuste 2024.pdf"
                       style="--outline-color: none; left: 615px; top: 203px"
                       class="location-map-dot dot-image"
@@ -3779,7 +3772,7 @@
                     </a>
                     <!--item 10-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCP-ECUS-04 ajuste 2024.pdf"
                       style="--outline-color: none; left: 622px; top: 230px"
                       class="location-map-dot dot-image"
@@ -3789,9 +3782,9 @@
                     </a>
                     <!--item 11-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCP-ECUS-03 ajuste 2024.pdf"
-                      style="--outline-color: none; left: 627px; top: 271px"
+                      style="--outline-color: none; left: 627px; top: 271px; z-index: 1;"
                       class="location-map-dot dot-image"
                     >
                       <img src="/assets/img/map-punto-control.svg" alt="" />
@@ -3799,7 +3792,7 @@
                     </a>
                     <!--item 12-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCP-ECUS-02 ajuste 2024.pdf"
                       style="--outline-color: none; left: 644px; top: 301px"
                       class="location-map-dot dot-image"
@@ -3809,9 +3802,9 @@
                     </a>
                     <!--item 13-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCP-ECUS-07 ajuste 2024.pdf"
-                      style="--outline-color: none; left: 702px; top: 263px"
+                      style="--outline-color: none; left: 702px; top: 263px; z-index: 2;"
                       class="location-map-dot dot-image"
                     >
                       <img src="/assets/img/map-punto-control.svg" alt="" />
@@ -3819,7 +3812,7 @@
                     </a>
                     <!--item 14-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCP-ECUS-10 ajuste 2024.pdf"
                       style="--outline-color: none; left: 706px; top: 282px"
                       class="location-map-dot dot-image"
@@ -3829,9 +3822,9 @@
                     </a>
                     <!--item 15-->
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/cusiana/interno/PCP-ECUS-08 ajuste 2024.pdf"
-                      style="--outline-color: none; left: 724px; top: 244px"
+                      style="--outline-color: none; left: 724px; top: 244px; z-index: 1;"
                       class="location-map-dot dot-image"
                     >
                       <img src="/assets/img/map-punto-control.svg" alt="" />
@@ -3843,7 +3836,7 @@
                     id="cusiana-sre-2">
                     <!--item 1-->
                     <a
-                      download=""
+                      target="_blank"=""
                       href="/assets/docs/cusiana/externo/PCE-ECUS-01 ajuste 2024.pdf"
                       style="--outline-color: none; left: 479px; top: 553px"
                       class="location-map-dot dot-image"
@@ -3856,7 +3849,7 @@
                     </a>
                     <!--item 2-->
                     <a
-                      download=""
+                      target="_blank"=""
                       href="/assets/docs/cusiana/externo/PCE-ECUS-02 ajuste 2024.pdf"
                       style="--outline-color: none; left: 737px; top: 435px"
                       class="location-map-dot dot-image"
@@ -3869,7 +3862,7 @@
                     </a>
                     <!--item 3-->
                     <a
-                      download=""
+                      target="_blank"=""
                       href="/assets/docs/cusiana/externo/PCE-ECUS-03 ajuste 2024.pdf"
                       style="--outline-color: none; left: 621px; top: 534px"
                       class="location-map-dot dot-image"
@@ -4254,44 +4247,25 @@
                     </span>
                   </div>
 
-                  <div class="dots-map-2024 dots-monitoreo d-none"
-                    id="cusiana-sre-8">
+                  <div class="dots-map-2024 dots-monitoreo d-none" id="cusiana-sre-8">
                     <!--item 1-->
-                    <span
-                      style="--outline-color: #ff0000; left: 472px; top: 226px"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000; left: 472px; top: 226px" class="location-map-dot"></span>
                     <!--item 2-->
-                    <span
-                      style="--outline-color: #ff0000; left: 602px; top: 276px"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000;left: 603px;top: 278px;" class="location-map-dot"></span>
                     <!--item 3-->
-                    <span
-                      style="--outline-color: #ff0000; left: 655px; top: 319px"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000;left: 654px;top: 318px;" class="location-map-dot"></span>
                     <!--item 4-->
-                    <span
-                      style="--outline-color: #ff0000; left: 639px; top: 197px"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000;left: 641px;top: 194px;" class="location-map-dot"></span>
                     <!--item 5-->
-                    <span
-                      style="--outline-color: #ff0000; left: 659px; top: 189px"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000;left: 658px;top: 188px;" class="location-map-dot"></span>
                     <!--item 6-->
-                    <span
-                      style="--outline-color: #ff0000; left: 695px; top: 192px"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000;left: 695px;top: 190px;" class="location-map-dot"></span>
                     <!--item 7-->
-                    <span
-                      style="--outline-color: #ff0000; left: 708px; top: 198px"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000;left: 708px;top: 193px;" class="location-map-dot"></span>
                     <!--item 8-->
-                    <span
-                      style="--outline-color: #ff0000; left: 714px; top: 211px"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000;left: 712px;top: 208px;" class="location-map-dot"></span>
                     <!--item 9-->
-                    <span
-                      style="--outline-color: #ff0000; left: 723px; top: 223px"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000;left: 722px;top: 219px;" class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-sre d-none"
@@ -4314,11 +4288,11 @@
                       class="location-map-dot"></span>
                       <!--item 5-->
                     <span
-                      style="--outline-color: #ff0000; left: 655px; top: 243px"
+                      style="--outline-color: #ff0000; left: 655px; top: 243px;"
                       class="location-map-dot"></span>
                       <!--item 6-->
                     <span
-                      style="--outline-color: #ff0000; left: 661px; top: 280px"
+                      style="--outline-color: #ff0000; left: 661px; top: 280px;"
                       class="location-map-dot"></span>
                       <!--item 7-->
                     <span
@@ -4345,36 +4319,21 @@
                       class="location-map-dot"></span>
                   </div>
 
-                  <div class="dots-map-2024 dots-sre d-none"
-                    id="cusiana-sre-17">
+                  <div class="dots-map-2024 dots-sre d-none" id="cusiana-sre-17">
                     <!--item 1-->
-                    <span
-                      style="--outline-color: #27ff00; left: 602px; top: 299px;"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #27ff00;left: 602px;top: 300px;" class="location-map-dot"></span>
                       <!--item 2-->
-                    <span
-                      style="--outline-color: #27ff00; left: 726px; top: 207px;"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #27ff00; left: 726px; top: 207px;" class="location-map-dot"></span>
                        <!--item 3-->
-                    <span
-                      style="--outline-color: #27ff00; left: 698px; top: 212px;"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #27ff00; left: 698px; top: 212px;" class="location-map-dot"></span>
                        <!--item 4-->
-                    <span
-                      style="--outline-color: #27ff00; left: 601px; top: 311px;"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #27ff00;left: 601px;top: 310px;" class="location-map-dot"></span>
                        <!--item 5-->
-                    <span
-                      style="--outline-color: #27ff00; left: 589px; top: 323px;"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #27ff00;left: 592px;top: 324px;" class="location-map-dot"></span>
                        <!--item 6-->
-                    <span
-                      style="--outline-color: #27ff00; left: 615px; top: 323px;"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #27ff00;left: 610px;top: 323px;" class="location-map-dot"></span>
                        <!--item 7-->
-                    <span
-                      style="--outline-color: #27ff00; left: 624px; top: 312px;"
-                      class="location-map-dot"></span>
+                    <span style="--outline-color: #27ff00;left: 618px;to;top: 311px;" class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-sre d-none"
@@ -4405,11 +4364,7 @@
                     id="cusiana-sre-20">
                     <!--item 1-->
                     <span
-                      style="--outline-color: #00ccff; left: 597px; top: 234px;"
-                      class="location-map-dot"></span>
-                      <!--item 2-->
-                    <span
-                      style="--outline-color: #00ccff; left: 714px; top: 204px;"
+                      style="--outline-color: #ff0000; left: 597px; top: 234px;"
                       class="location-map-dot"></span>
                   </div>
 
@@ -4431,13 +4386,6 @@
                           </g>
                       </svg>
                     </span>
-                  </div>
-                  
-                  <div class="dots-map-2024 dots-sre d-none"
-                    id="cusiana-sre-20">
-                    <span
-                      style="--outline-color: #ff0000; left: 597px; top: 234px;"
-                      class="location-map-dot"></span>
                   </div>
 
                 </div>
