--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -4333,7 +4333,7 @@
                        <!--item 6-->
                     <span style="--outline-color: #27ff00;left: 610px;top: 323px;" class="location-map-dot"></span>
                        <!--item 7-->
-                    <span style="--outline-color: #27ff00;left: 618px;to;top: 311px;" class="location-map-dot"></span>
+                    <span style="--outline-color: #27ff00;left: 618px;top: 311px;" class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-sre d-none"
