fix: adjust point in miraflores

--- a/pages/miraflores/index.html
+++ b/pages/miraflores/index.html
@@ -4897,9 +4897,7 @@
                                             style="--outline-color: #00ccff; left: 190px; top: 323px"
                                             class="location-map-dot"></span>
                                         <!--item 2-->
-                                        <span
-                                            style="--outline-color: #00ccff; left: 731px; top: 373px"
-                                            class="location-map-dot"></span>
+                                        <span style="--outline-color: #00ccff;left: 733px;top: 369px;" class="location-map-dot"></span>
                                         <!--item 3-->
                                         <span
                                             style="--outline-color: #00ccff; left: 759px; top: 339px"
